[OS X] install icon resources in app bundles where this doesn't happen automatically
REVIEW: 125649

--- a/flow/part/CMakeLists.txt
+++ b/flow/part/CMakeLists.txt
@@ -54,3 +54,6 @@ install( FILES flow.appdata.xml DESTINATION ${SHARE_INSTALL_PREFIX}/appdata/)
 ### GUI files ###
 install( FILES flow.rc DESTINATION ${DATA_INSTALL_DIR}/flow)
 install( FILES flowrc DESTINATION ${CONFIG_INSTALL_DIR} )
+if(APPLE)
+   install( FILES ${CMAKE_CURRENT_BINARY_DIR}/flow_KDEINIT_SRCS.icns DESTINATION ${BUNDLE_INSTALL_DIR}/calligraflow.app/Contents/Resources)
+endif()
