--- a/plugins/formulashape/pics/CMakeLists.txt
+++ b/plugins/formulashape/pics/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_subdirectory( hicolor )
 
 ecm_install_icons( ICONS
-    22-actions-formulashape.png
+    32-mimetypes-x-shape-formula.png
     DESTINATION ${DATA_INSTALL_DIR}/calligra/icons
     THEME hicolor
 )
