Install Stage action icons in own and the not global icon dir

--- a/stage/pics/CMakeLists.txt
+++ b/stage/pics/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_subdirectory( animations )
+
 install( FILES
          webslideshow-sidebar.png
          layout-elements.svg
@@ -9,6 +10,11 @@ ecm_install_icons( ICONS
     16-actions-highlight.png
     16-actions-pen.png
 
+    DESTINATION ${DATA_INSTALL_DIR}/stage/icons
+    THEME hicolor
+)
+
+ecm_install_icons( ICONS
     16-apps-calligrastage.png
     22-apps-calligrastage.png
     32-apps-calligrastage.png
