--- a/sheets/plugins/calendar/kspread_plugin_tool_calendar.desktop
+++ b/sheets/plugins/calendar/kspread_plugin_tool_calendar.desktop
@@ -81,7 +81,7 @@ Comment[wa]=Sititche on calindrî dins one fortchete di boesses
 Comment[x-test]=xxInserts a calendar into a cell range.xx
 Comment[zh_CN]=在单元格范围中插入日历。
 Comment[zh_TW]=將行事曆插入一塊儲存格範圍。
-Icon=office-calendar
+Icon=x-office-calendar
 Type=Service
 X-KDE-Library=kspread_plugin_tool_calendar
 X-KDE-ServiceTypes=CalligraSheets/Plugin,KPluginInfo
