--- a/plugins/formulashape/kformulapart.desktop
+++ b/plugins/formulashape/kformulapart.desktop
@@ -101,4 +101,4 @@ GenericName[xh]=Umhleli wendlela yokubala
 GenericName[x-test]=xxFormula Editorxx
 GenericName[zh_CN]=公式编辑器
 GenericName[zh_TW]=方程式編輯器
-Icon=kformula
+Icon=x-shape-formula
