Properly register all KoApplication apps on D-Bus

--- a/karbon/data/karbon.desktop
+++ b/karbon/data/karbon.desktop
@@ -152,3 +152,5 @@ Comment[x-test]=xxCreate scalable vector drawingsxx
 Comment[zh_CN]=创建可缩放矢量绘图
 Comment[zh_TW]=建立可調整向量圖
 X-DocPath=http://userbase.kde.org/Special:MyLanguage/Karbon
+X-DBUS-StartupType=Multi
+X-DBUS-ServiceName=org.calligra.karbon
