--- a/plugins/pathshapes/pics/CMakeLists.txt
+++ b/plugins/pathshapes/pics/CMakeLists.txt
@@ -12,5 +12,5 @@ ecm_install_icons( ICONS
     22-actions-spiral-shape.png
     22-actions-star-shape.png
     DESTINATION ${DATA_INSTALL_DIR}/calligra/icons
-    THEME oxygen
+    THEME hicolor
 )
