--- a/plugins/defaultTools/pics/CMakeLists.txt
+++ b/plugins/defaultTools/pics/CMakeLists.txt
@@ -1,4 +1,9 @@
-install( FILES cursor_shear.png cursor_rotate.png cursor_connect.png DESTINATION ${DATA_INSTALL_DIR}/calligra/icons)
+install( FILES
+    cursor_shear.png
+    cursor_rotate.png
+    cursor_connect.png
+    DESTINATION ${DATA_INSTALL_DIR}/calligra/cursors
+)
 
 ecm_install_icons( ICONS
     16-actions-escape-direction-all.png
