Move stencilbox plugin to plugins/

--- a/karbon/stencils/CMakeLists.txt
+++ b/karbon/stencils/CMakeLists.txt
@@ -38,41 +38,41 @@ file(GLOB Racks_Stencils "Racks/*.odg" "Racks/*.desktop" "Racks/*.png")
 file(GLOB Jigsaw_Stencils "Jigsaw/*.odg" "Jigsaw/*.desktop" "Jigsaw/*.png")
 
 
-install( FILES ${Map_Stencils} DESTINATION ${DATA_INSTALL_DIR}/karbon/stencils/Map)
-install( FILES ${Electronic_Stencils} DESTINATION ${DATA_INSTALL_DIR}/karbon/stencils/Electronic)
-install( FILES ${Network_Stencils} DESTINATION ${DATA_INSTALL_DIR}/karbon/stencils/Network)
-install( FILES ${MSE_Stencils} DESTINATION ${DATA_INSTALL_DIR}/karbon/stencils/MSE)
-install( FILES ${Logic_Stencils} DESTINATION ${DATA_INSTALL_DIR}/karbon/stencils/Logic)
-install( FILES ${Value_Stream_Mapping_Stencils} DESTINATION ${DATA_INSTALL_DIR}/karbon/stencils/Value_Stream_Mapping)
-install( FILES ${BPMN_Stencils} DESTINATION ${DATA_INSTALL_DIR}/karbon/stencils/BPMN)
-install( FILES ${Flags_Stencils} DESTINATION ${DATA_INSTALL_DIR}/karbon/stencils/Flags)
-install( FILES ${Assorted_Stencils} DESTINATION ${DATA_INSTALL_DIR}/karbon/stencils/Assorted)
-install( FILES ${Edpc_Stencils} DESTINATION ${DATA_INSTALL_DIR}/karbon/stencils/Edpc)
-install( FILES ${Central_Data_Processing_Stencils} DESTINATION ${DATA_INSTALL_DIR}/karbon/stencils/Central_Data_Processing)
-install( FILES ${Optics_Stencils} DESTINATION ${DATA_INSTALL_DIR}/karbon/stencils/Optics)
-install( FILES ${Scenegraph_Stencils} DESTINATION ${DATA_INSTALL_DIR}/karbon/stencils/Scenegraph)
-install( FILES ${Cisco_Stencils} DESTINATION ${DATA_INSTALL_DIR}/karbon/stencils/Cisco)
-install( FILES ${Circuit_Stencils} DESTINATION ${DATA_INSTALL_DIR}/karbon/stencils/Circuit)
-install( FILES ${Pneumatic_Stencils} DESTINATION ${DATA_INSTALL_DIR}/karbon/stencils/Pneumatic)
-install( FILES ${Misc_Stencils} DESTINATION ${DATA_INSTALL_DIR}/karbon/stencils/Misc)
-install( FILES ${ChemEng_Stencils} DESTINATION ${DATA_INSTALL_DIR}/karbon/stencils/ChemEng)
-install( FILES ${Building_Site_Stencils} DESTINATION ${DATA_INSTALL_DIR}/karbon/stencils/Building_Site)
-install( FILES ${Gane_and_Sarson_Stencils} DESTINATION ${DATA_INSTALL_DIR}/karbon/stencils/Gane_and_Sarson)
-install( FILES ${Civil_Stencils} DESTINATION ${DATA_INSTALL_DIR}/karbon/stencils/Civil)
-install( FILES ${Cybernetics_Stencils} DESTINATION ${DATA_INSTALL_DIR}/karbon/stencils/Cybernetics)
-install( FILES ${LST_Stencils} DESTINATION ${DATA_INSTALL_DIR}/karbon/stencils/LST)
-install( FILES ${Circuit2_Stencils} DESTINATION ${DATA_INSTALL_DIR}/karbon/stencils/Circuit2)
-install( FILES ${Electric_Stencils} DESTINATION ${DATA_INSTALL_DIR}/karbon/stencils/Electric)
-install( FILES ${Lights_Stencils} DESTINATION ${DATA_INSTALL_DIR}/karbon/stencils/Lights)
-install( FILES ${CMOS_Stencils} DESTINATION ${DATA_INSTALL_DIR}/karbon/stencils/CMOS)
-install( FILES ${SDL_Stencils} DESTINATION ${DATA_INSTALL_DIR}/karbon/stencils/SDL)
-install( FILES ${RDP_Stencils} DESTINATION ${DATA_INSTALL_DIR}/karbon/stencils/RDP)
-install( FILES ${Contact_Stencils} DESTINATION ${DATA_INSTALL_DIR}/karbon/stencils/Contact)
-install( FILES ${Digital_Stencils} DESTINATION ${DATA_INSTALL_DIR}/karbon/stencils/Digital)
-install( FILES ${Renewable_Energy_Stencils} DESTINATION ${DATA_INSTALL_DIR}/karbon/stencils/Renewable_Energy)
-install( FILES ${Chemistry_Lab_Stencils} DESTINATION ${DATA_INSTALL_DIR}/karbon/stencils/Chemistry_Lab)
-install( FILES ${Electric2_Stencils} DESTINATION ${DATA_INSTALL_DIR}/karbon/stencils/Electric2)
-install( FILES ${Basic_Flowchart_Stencils} DESTINATION ${DATA_INSTALL_DIR}/karbon/stencils/Basic_Flowchart)
-install( FILES ${Sybase_Stencils} DESTINATION ${DATA_INSTALL_DIR}/karbon/stencils/Sybase)
-install( FILES ${Racks_Stencils} DESTINATION ${DATA_INSTALL_DIR}/karbon/stencils/Racks)
-install( FILES ${Jigsaw_Stencils} DESTINATION ${DATA_INSTALL_DIR}/karbon/stencils/Jigsaw)
+install( FILES ${Map_Stencils} DESTINATION ${DATA_INSTALL_DIR}/calligra/stencils/Map)
+install( FILES ${Electronic_Stencils} DESTINATION ${DATA_INSTALL_DIR}/calligra/stencils/Electronic)
+install( FILES ${Network_Stencils} DESTINATION ${DATA_INSTALL_DIR}/calligra/stencils/Network)
+install( FILES ${MSE_Stencils} DESTINATION ${DATA_INSTALL_DIR}/calligra/stencils/MSE)
+install( FILES ${Logic_Stencils} DESTINATION ${DATA_INSTALL_DIR}/calligra/stencils/Logic)
+install( FILES ${Value_Stream_Mapping_Stencils} DESTINATION ${DATA_INSTALL_DIR}/calligra/stencils/Value_Stream_Mapping)
+install( FILES ${BPMN_Stencils} DESTINATION ${DATA_INSTALL_DIR}/calligra/stencils/BPMN)
+install( FILES ${Flags_Stencils} DESTINATION ${DATA_INSTALL_DIR}/calligra/stencils/Flags)
+install( FILES ${Assorted_Stencils} DESTINATION ${DATA_INSTALL_DIR}/calligra/stencils/Assorted)
+install( FILES ${Edpc_Stencils} DESTINATION ${DATA_INSTALL_DIR}/calligra/stencils/Edpc)
+install( FILES ${Central_Data_Processing_Stencils} DESTINATION ${DATA_INSTALL_DIR}/calligra/stencils/Central_Data_Processing)
+install( FILES ${Optics_Stencils} DESTINATION ${DATA_INSTALL_DIR}/calligra/stencils/Optics)
+install( FILES ${Scenegraph_Stencils} DESTINATION ${DATA_INSTALL_DIR}/calligra/stencils/Scenegraph)
+install( FILES ${Cisco_Stencils} DESTINATION ${DATA_INSTALL_DIR}/calligra/stencils/Cisco)
+install( FILES ${Circuit_Stencils} DESTINATION ${DATA_INSTALL_DIR}/calligra/stencils/Circuit)
+install( FILES ${Pneumatic_Stencils} DESTINATION ${DATA_INSTALL_DIR}/calligra/stencils/Pneumatic)
+install( FILES ${Misc_Stencils} DESTINATION ${DATA_INSTALL_DIR}/calligra/stencils/Misc)
+install( FILES ${ChemEng_Stencils} DESTINATION ${DATA_INSTALL_DIR}/calligra/stencils/ChemEng)
+install( FILES ${Building_Site_Stencils} DESTINATION ${DATA_INSTALL_DIR}/calligra/stencils/Building_Site)
+install( FILES ${Gane_and_Sarson_Stencils} DESTINATION ${DATA_INSTALL_DIR}/calligra/stencils/Gane_and_Sarson)
+install( FILES ${Civil_Stencils} DESTINATION ${DATA_INSTALL_DIR}/calligra/stencils/Civil)
+install( FILES ${Cybernetics_Stencils} DESTINATION ${DATA_INSTALL_DIR}/calligra/stencils/Cybernetics)
+install( FILES ${LST_Stencils} DESTINATION ${DATA_INSTALL_DIR}/calligra/stencils/LST)
+install( FILES ${Circuit2_Stencils} DESTINATION ${DATA_INSTALL_DIR}/calligra/stencils/Circuit2)
+install( FILES ${Electric_Stencils} DESTINATION ${DATA_INSTALL_DIR}/calligra/stencils/Electric)
+install( FILES ${Lights_Stencils} DESTINATION ${DATA_INSTALL_DIR}/calligra/stencils/Lights)
+install( FILES ${CMOS_Stencils} DESTINATION ${DATA_INSTALL_DIR}/calligra/stencils/CMOS)
+install( FILES ${SDL_Stencils} DESTINATION ${DATA_INSTALL_DIR}/calligra/stencils/SDL)
+install( FILES ${RDP_Stencils} DESTINATION ${DATA_INSTALL_DIR}/calligra/stencils/RDP)
+install( FILES ${Contact_Stencils} DESTINATION ${DATA_INSTALL_DIR}/calligra/stencils/Contact)
+install( FILES ${Digital_Stencils} DESTINATION ${DATA_INSTALL_DIR}/calligra/stencils/Digital)
+install( FILES ${Renewable_Energy_Stencils} DESTINATION ${DATA_INSTALL_DIR}/calligra/stencils/Renewable_Energy)
+install( FILES ${Chemistry_Lab_Stencils} DESTINATION ${DATA_INSTALL_DIR}/calligra/stencils/Chemistry_Lab)
+install( FILES ${Electric2_Stencils} DESTINATION ${DATA_INSTALL_DIR}/calligra/stencils/Electric2)
+install( FILES ${Basic_Flowchart_Stencils} DESTINATION ${DATA_INSTALL_DIR}/calligra/stencils/Basic_Flowchart)
+install( FILES ${Sybase_Stencils} DESTINATION ${DATA_INSTALL_DIR}/calligra/stencils/Sybase)
+install( FILES ${Racks_Stencils} DESTINATION ${DATA_INSTALL_DIR}/calligra/stencils/Racks)
+install( FILES ${Jigsaw_Stencils} DESTINATION ${DATA_INSTALL_DIR}/calligra/stencils/Jigsaw)
