--- a/stage/part/tests/CMakeLists.txt
+++ b/stage/part/tests/CMakeLists.txt
@@ -13,7 +13,7 @@ set(TestShapeAnimations_test_SRCS TestShapeAnimations.cpp ModelTest.cpp)
 
 kde4_add_unit_test(TestShapeAnimations TESTNAME stage-part-TestShapeAnimations  ${TestShapeAnimations_test_SRCS})
 
-target_link_libraries(TestShapeAnimations calligrastageprivate ${QT_QTTEST_LIBRARY})
+target_link_libraries(TestShapeAnimations calligrastageprivate Qt5::Test)
 
 ########### next target ###############
 
@@ -21,7 +21,7 @@ set(TestCustomSlideShows_test_SRCS TestCustomSlideShows.cpp )
 
 kde4_add_unit_test(TestCustomSlideShows TESTNAME stage-part-TestCustomSlideShows  ${TestCustomSlideShows_test_SRCS})
 
-target_link_libraries(TestCustomSlideShows calligrastageprivate ${QT_QTTEST_LIBRARY})
+target_link_libraries(TestCustomSlideShows calligrastageprivate Qt5::Test)
 
 ########### next target ###############
 
@@ -29,7 +29,7 @@ set(TestEditCustomSlideShowsCommand_test_SRCS TestEditCustomSlideShowsCommand.cp
 
 kde4_add_unit_test(TestEditCustomSlideShowsCommand TESTNAME stage-part-TestEditCustomSlideShowsCommand  ${TestEditCustomSlideShowsCommand_test_SRCS})
 
-target_link_libraries(TestEditCustomSlideShowsCommand calligrastageprivate ${QT_QTTEST_LIBRARY})
+target_link_libraries(TestEditCustomSlideShowsCommand calligrastageprivate Qt5::Test)
 
 ########### next target ###############
 
@@ -37,7 +37,7 @@ set(TestAddCustomSlideShowCommand_test_SRCS TestAddCustomSlideShowCommand.cpp )
 
 kde4_add_unit_test(TestAddCustomSlideShowCommand TESTNAME stage-part-TestAddCustomSlideShowCommand  ${TestAddCustomSlideShowCommand_test_SRCS})
 
-target_link_libraries(TestAddCustomSlideShowCommand calligrastageprivate ${QT_QTTEST_LIBRARY})
+target_link_libraries(TestAddCustomSlideShowCommand calligrastageprivate Qt5::Test)
 
 ########### next target ###############
 
@@ -45,7 +45,7 @@ set(TestDelCustomSlideShowCommand_test_SRCS TestDelCustomSlideShowCommand.cpp )
 
 kde4_add_unit_test(TestDelCustomSlideShowCommand TESTNAME stage-part-TestDelCustomSlideShowCommand  ${TestDelCustomSlideShowCommand_test_SRCS})
 
-target_link_libraries(TestDelCustomSlideShowCommand calligrastageprivate ${QT_QTTEST_LIBRARY})
+target_link_libraries(TestDelCustomSlideShowCommand calligrastageprivate Qt5::Test)
 
 ########### next target ###############
 
@@ -53,7 +53,7 @@ set(TestRenameCustomSlideShowCommand_test_SRCS TestRenameCustomSlideShowCommand.
 
 kde4_add_unit_test(TestRenameCustomSlideShowCommand TESTNAME stage-part-TestRenameCustomSlideShowCommand  ${TestRenameCustomSlideShowCommand_test_SRCS})
 
-target_link_libraries(TestRenameCustomSlideShowCommand calligrastageprivate ${QT_QTTEST_LIBRARY})
+target_link_libraries(TestRenameCustomSlideShowCommand calligrastageprivate Qt5::Test)
 
 ########### next target ###############
 
@@ -61,4 +61,4 @@ set(TestDeleteSlidesCommand_test_SRCS TestDeleteSlidesCommand.cpp )
 
 kde4_add_unit_test(TestDeleteSlidesCommand TESTNAME stage-part-TestDeleteSlidesCommand  ${TestDeleteSlidesCommand_test_SRCS})
 
-target_link_libraries(TestDeleteSlidesCommand calligrastageprivate ${QT_QTTEST_LIBRARY})
+target_link_libraries(TestDeleteSlidesCommand calligrastageprivate Qt5::Test)
