--- a/libs/widgetutils/tests/CMakeLists.txt
+++ b/libs/widgetutils/tests/CMakeLists.txt
@@ -1,11 +1,17 @@
 set( EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR} )
 include_directories( ${CMAKE_SOURCE_DIR}/libs/widgetutils )
 
+# call: kowidgetutils_add_unit_test(<test-name> <sources> LINK_LIBRARIES <library> [<library> [...]] [GUI])
+macro(KOWIDGETUTILS_ADD_UNIT_TEST _TEST_NAME)
+    ecm_add_test( ${ARGN}
+        TEST_NAME "${_TEST_NAME}"
+        NAME_PREFIX "libs-kowidgetutils-"
+    )
+endmacro()
+
 ########### next target ###############
 
-set(kopropertiestest_SRCS KoPropertiesTest.cpp )
-kde4_add_unit_test(KoPropertiesTest TESTNAME libs-widgetutils-KoPropertiesTest ${kopropertiestest_SRCS})
-target_link_libraries(KoPropertiesTest  kowidgetutils Qt5::Test)
+kowidgetutils_add_unit_test(KoPropertiesTest KoPropertiesTest.cpp  LINK_LIBRARIES kowidgetutils Qt5::Test)
 
 ########### next target ###############
 
