--- a/libs/kopageapp/tests/CMakeLists.txt
+++ b/libs/kopageapp/tests/CMakeLists.txt
@@ -1,36 +1,26 @@
 set( EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR} )
 include_directories( ${KOPAGEAPP_INCLUDES} )
 
-########### next target ###############
-
-set(TestPAPageInsertCommand_test_SRCS TestPAPageInsertCommand.cpp )
-
-kde4_add_unit_test(TestPAPageInsertCommand TESTNAME libs-kopageapp-TestPAPageInsertCommand ${TestPAPageInsertCommand_test_SRCS})
-
-target_link_libraries(TestPAPageInsertCommand   kopageapp Qt5::Test)
-
-########### next target ###############
-
-set(TestPAPageDeleteCommand_test_SRCS TestPAPageDeleteCommand.cpp )
-
-kde4_add_unit_test(TestPAPageDeleteCommand TESTNAME libs-kopageapp-TestPAPageDeleteCommand ${TestPAPageDeleteCommand_test_SRCS})
-
-target_link_libraries(TestPAPageDeleteCommand   kopageapp Qt5::Test)
+# call: kopageapp_add_unit_test(<test-name> <sources> LINK_LIBRARIES <library> [<library> [...]] [GUI])
+macro(KOPAGEAPP_ADD_UNIT_TEST _TEST_NAME)
+    ecm_add_test( ${ARGN}
+        TEST_NAME "${_TEST_NAME}"
+        NAME_PREFIX "libs-flake-"
+    )
+endmacro()
 
 ########### next target ###############
 
-set(TestPAPageMoveCommand_test_SRCS TestPAPageMoveCommand.cpp )
-
-kde4_add_unit_test(TestPAPageMoveCommand TESTNAME libs-kopageapp-TestPAPageMoveCommand ${TestPAPageMoveCommand_test_SRCS})
-
-target_link_libraries(TestPAPageMoveCommand   kopageapp Qt5::Test)
+kopageapp_add_unit_test(TestPAPageInsertCommand TestPAPageInsertCommand.cpp  LINK_LIBRARIES kopageapp Qt5::Test)
 
 ########### next target ###############
 
-set(TestPACopyPastePage_test_SRCS TestPACopyPastePage.cpp )
-
-kde4_add_unit_test(TestPACopyPastePage TESTNAME libs-kopageapp-TestPACopyPastePage ${TestPACopyPastePage_test_SRCS})
-
-target_link_libraries(TestPACopyPastePage   kopageapp Qt5::Test)
+kopageapp_add_unit_test(TestPAPageDeleteCommand TestPAPageDeleteCommand.cpp  LINK_LIBRARIES kopageapp Qt5::Test)
 
 ########### next target ###############
+
+kopageapp_add_unit_test(TestPAPageMoveCommand TestPAPageMoveCommand.cpp  LINK_LIBRARIES kopageapp Qt5::Test)
+
+########### next target ###############
+
+kopageapp_add_unit_test(TestPACopyPastePage TestPACopyPastePage.cpp  LINK_LIBRARIES kopageapp Qt5::Test)
