--- a/libs/pigment/tests/CMakeLists.txt
+++ b/libs/pigment/tests/CMakeLists.txt
@@ -9,37 +9,29 @@ if(MSVC OR (WIN32 AND "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Intel"))
   set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:LIBC.LIB")
 endif()
 
-########### next target ###############
-
-set(TestKoColorSpaceRegistry_test_SRCS TestKoColorSpaceRegistry.cpp )
-
-kde4_add_unit_test(TestKoColorSpaceRegistry TESTNAME libs-pigment-TestKoColorSpaceRegistry ${TestKoColorSpaceRegistry_test_SRCS})
-
-target_link_libraries(TestKoColorSpaceRegistry  pigmentcms KF5::I18n  Qt5::Test)
-
-########### next target ###############
-
-set(TestColorConversion_test_SRCS TestColorConversion.cpp )
-
-kde4_add_unit_test(TestColorConversion TESTNAME libs-pigment-TestColorConversion  ${TestColorConversion_test_SRCS})
-
-target_link_libraries(TestColorConversion  pigmentcms Qt5::Test)
+# call: pigment_add_unit_test(<test-name> <sources> LINK_LIBRARIES <library> [<library> [...]] [GUI])
+macro(PIGMENT_ADD_UNIT_TEST _TEST_NAME)
+    ecm_add_test( ${ARGN}
+        TEST_NAME "${_TEST_NAME}"
+        NAME_PREFIX "libs-pigment-"
+    )
+endmacro()
 
 ########### next target ###############
 
-set(TestKoColorSpaceAbstract_test_SRCS TestKoColorSpaceAbstract.cpp )
-
-kde4_add_unit_test(TestKoColorSpaceAbstract TESTNAME libs-pigment-TestKoColorSpaceAbstract  ${TestKoColorSpaceAbstract_test_SRCS})
-
-target_link_libraries(TestKoColorSpaceAbstract  pigmentcms KF5::I18n  Qt5::Test)
+pigment_add_unit_test(TestKoColorSpaceRegistry TestKoColorSpaceRegistry.cpp  LINK_LIBRARIES pigmentcms KF5::I18n Qt5::Test)
 
 ########### next target ###############
 
-set(TestKoColorSpaceMaths_test_SRCS TestKoColorSpaceMaths.cpp)
+pigment_add_unit_test(TestColorConversion TestColorConversion.cpp  LINK_LIBRARIES pigmentcms Qt5::Test)
 
-kde4_add_unit_test(TestKoColorSpaceMaths TESTNAME libs-pigment-TestKoColorSpaceMaths ${TestKoColorSpaceMaths_test_SRCS})
+########### next target ###############
 
-target_link_libraries(TestKoColorSpaceMaths  pigmentcms Qt5::Test)
+pigment_add_unit_test(TestKoColorSpaceAbstract TestKoColorSpaceAbstract.cpp  LINK_LIBRARIES pigmentcms KF5::I18n Qt5::Test)
+
+########### next target ###############
+
+pigment_add_unit_test(TestKoColorSpaceMaths TestKoColorSpaceMaths.cpp  LINK_LIBRARIES pigmentcms Qt5::Test)
 
 ########### next target ###############
 set(CCSGraph_GRAPH CCSGraph.cpp)
@@ -48,64 +40,32 @@ target_link_libraries(CCSGraph  pigmentcms KF5::I18n )
 
 ########### next target ###############
 
-set(TestColorConversionSystem_test_SRCS TestColorConversionSystem.cpp )
-
-kde4_add_unit_test(TestColorConversionSystem TESTNAME libs-pigment-TestColorConversionSystem ${TestColorConversionSystem_test_SRCS})
-
-target_link_libraries(TestColorConversionSystem  pigmentcms KF5::I18n  Qt5::Test)
+pigment_add_unit_test(TestColorConversionSystem TestColorConversionSystem.cpp  LINK_LIBRARIES pigmentcms KF5::I18n Qt5::Test)
 
 ########### next target ###############
 
-set(TestKoColor_test_SRCS TestKoColor.cpp )
-
-kde4_add_unit_test(TestKoColor TESTNAME libs-pigment-TestKoColor ${TestKoColor_test_SRCS})
-
-target_link_libraries(TestKoColor  pigmentcms KF5::I18n  Qt5::Test)
-
+pigment_add_unit_test(TestKoColor TestKoColor.cpp  LINK_LIBRARIES pigmentcms KF5::I18n Qt5::Test)
 
 ########### next target ###############
 
-set(TestKoIntegerMaths_test_SRCS TestKoIntegerMaths.cpp )
-kde4_add_unit_test(TestKoIntegerMaths TESTNAME libs-pigment-TestKoIntegerMaths ${TestKoIntegerMaths_test_SRCS})
-target_link_libraries(TestKoIntegerMaths  pigmentcms KF5::I18n  Qt5::Test)
+pigment_add_unit_test(TestKoIntegerMaths TestKoIntegerMaths.cpp  LINK_LIBRARIES pigmentcms KF5::I18n Qt5::Test)
 
 ########### next target ###############
 
-set(TestConvolutionOpImpl_test_SRCS TestConvolutionOpImpl.cpp )
-
-kde4_add_unit_test(TestConvolutionOpImpl TESTNAME libs-pigment-TestConvolutionOpImpl ${TestConvolutionOpImpl_test_SRCS})
-
-target_link_libraries(TestConvolutionOpImpl  pigmentcms KF5::I18n  Qt5::Test)
-
+pigment_add_unit_test(TestConvolutionOpImpl TestConvolutionOpImpl.cpp  LINK_LIBRARIES pigmentcms KF5::I18n Qt5::Test)
 
 ########### next target ###############
 
-set(TestKoRgbU8ColorSpaceTester_test_SRCS KoRgbU8ColorSpaceTester.cpp )
-
-kde4_add_unit_test(TestKoRgbU8ColorSpaceTester TESTNAME libs-pigment-TestKoRgbU8ColorSpaceTester ${TestKoRgbU8ColorSpaceTester_test_SRCS})
-
-target_link_libraries(TestKoRgbU8ColorSpaceTester  pigmentcms KF5::I18n  Qt5::Test)
+pigment_add_unit_test(TestKoRgbU8ColorSpaceTester KoRgbU8ColorSpaceTester.cpp  LINK_LIBRARIES pigmentcms KF5::I18n Qt5::Test)
 
 ########### next target ###############
 
-set(TestKoColorSpaceSanity_test_SRCS TestKoColorSpaceSanity.cpp )
-
-kde4_add_unit_test(TestKoColorSpaceSanity TESTNAME libs-pigment-TestKoColorSpaceSanity ${TestKoColorSpaceSanity_test_SRCS})
-
-target_link_libraries(TestKoColorSpaceSanity  pigmentcms KF5::I18n  Qt5::Test)
+pigment_add_unit_test(TestKoColorSpaceSanity TestKoColorSpaceSanity.cpp  LINK_LIBRARIES pigmentcms KF5::I18n Qt5::Test)
 
 ########### next target ###############
 
-set(TestFallBackColorTransformation_test_SRCS TestFallBackColorTransformation.cpp )
-
-kde4_add_unit_test(TestFallBackColorTransformation TESTNAME libs-pigment-TestFallBackColorTransformation ${TestFallBackColorTransformation_test_SRCS})
-
-target_link_libraries(TestFallBackColorTransformation  pigmentcms KF5::I18n  Qt5::Test)
+pigment_add_unit_test(TestFallBackColorTransformation TestFallBackColorTransformation.cpp  LINK_LIBRARIES pigmentcms KF5::I18n Qt5::Test)
 
 ########### next target ###############
 
-set(TestKoChannelInfo_test_SRCS TestKoChannelInfo.cpp )
-
-kde4_add_unit_test(TestKoChannelInfo TESTNAME libs-pigment-TestKoChannelInfo ${TestKoChannelInfo_test_SRCS})
-
-target_link_libraries(TestKoChannelInfo  pigmentcms KF5::I18n  Qt5::Test)
+pigment_add_unit_test(TestKoChannelInfo TestKoChannelInfo.cpp  LINK_LIBRARIES pigmentcms KF5::I18n Qt5::Test)
